--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,22 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <repositories>
+      <repository>
+          <id>scala-tools.org</id>
+          <name>Scala-tools Maven2 Repository</name>
+          <url>http://scala-tools.org/repo-releases</url>
+      </repository>
+  </repositories>
+
+  <pluginRepositories>
+      <pluginRepository>
+          <id>scala-tools.org</id>
+          <name>Scala-tools Maven2 Repository</name>
+          <url>http://scala-tools.org/repo-releases</url>
+      </pluginRepository>
+  </pluginRepositories>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -21,5 +37,51 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	<groupId>org.scala-lang</groupId>
+	<artifactId>scala-library</artifactId>
+	<!-- <version>2.12.0-M2</version> -->
+        <version>2.9.2</version>
+    </dependency>
+    <dependency>
+	<groupId>org.apache.thrift</groupId>
+	<artifactId>libthrift</artifactId>
+	<version>0.9.2</version>
+    </dependency>
+    <dependency>
+	<groupId>com.twitter</groupId>
+	<artifactId>scrooge-generator</artifactId>
+	<version>3.1.1</version>
+    </dependency>
+    <dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-lang3</artifactId>
+	<version>3.4</version>
+    </dependency>
+
   </dependencies>
+
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.scala-tools</groupId>
+              <artifactId>maven-scala-plugin</artifactId>
+              <executions>
+                  <execution>
+                      <goals>
+                          <goal>compile</goal>
+                          <goal>testCompile</goal>
+                      </goals>
+                  </execution>
+              </executions>
+              <configuration>
+                  <sourceDir>src/main/scala</sourceDir>
+                  <jvmArgs>
+                      <jvmArg>-Xms1G</jvmArg>
+                      <jvmArg>-Xmx4G</jvmArg>
+                  </jvmArgs>
+              </configuration>
+          </plugin>
+      </plugins>
+  </build>
 </project>
