--- a/pom.xml
+++ b/pom.xml
@@ -15,50 +15,31 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-	<groupId>org.apache.thrift</groupId>
-	<artifactId>libthrift</artifactId>
-	<version>0.9.2</version>
-    </dependency>
-    <dependency>
-	<groupId>org.apache.commons</groupId>
-	<artifactId>commons-lang3</artifactId>
-	<version>3.4</version>
-    </dependency>
-    <dependency>
-        <groupId>com.google.guava</groupId>groupId>
-        <artifactId>guava</artifactId>artifactId>
-        <version>19.0-rc1</version>version>
-    </dependency>dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>3.8.1</version>
+          <scope>test</scope>pe>
+      </dependency>
+      <dependency>
+	  <groupId>org.apache.thrift</groupId>
+	  <artifactId>libthrift</artifactId>
+	  <version>0.9.2</version>
+      </dependency>
+      <dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-lang3</artifactId>
+	  <version>3.4</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        <version>19.0-rc1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.wikidata.wdtk</groupId>
+          <artifactId>wdtk-util</artifactId>
+          <version>0.4.0</version>
+      </dependency>
   </dependencies>
-
-  <build>
-      <plugins>
-          <plugin>
-              <groupId>org.scala-tools</groupId>
-              <artifactId>maven-scala-plugin</artifactId>
-              <executions>
-                  <execution>
-                      <goals>
-                          <goal>compile</goal>
-                          <goal>testCompile</goal>
-                      </goals>
-                  </execution>
-              </executions>
-              <configuration>
-                  <sourceDir>src/main/scala</sourceDir>
-                  <jvmArgs>
-                      <jvmArg>-Xms1G</jvmArg>
-                      <jvmArg>-Xmx4G</jvmArg>
-                  </jvmArgs>
-              </configuration>
-          </plugin>
-      </plugins>
-  </build>
 </project>
