--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,11 @@
           <artifactId>wdtk-util</artifactId>
           <version>0.4.0</version>
       </dependency>
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>9.4-1201-jdbc41</version>
+          </dependency>dependency>
+
   </dependencies>
 </project>
