--- a/pom.xml
+++ b/pom.xml
@@ -129,8 +129,8 @@
               </configuration>
               <executions>
                   <execution>
-                      <id>make-assembly</id>id> <!-- this is used for inheritance merges -->
-                      <phase>package</phase>phase> <!-- bind to the packaging phase -->
+                      <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                      <phase>package</phase> <!-- bind to the packaging phase -->
                       <goals>
                           <goal>single</goal>
                       </goals>
