--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>edu</groupId>
+  <groupId>jhu</groupId>
   <artifactId>wikilinks</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -19,7 +19,27 @@
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>3.8.1</version>
-          <scope>test</scope>pe>
+          <scope>test</scope>
+      </dependency>
+      <!-- <dependency> -->
+      <!--     <groupId>org.apache.logging.log4j</groupId> -->
+      <!--     <artifactId>log4j-core</artifactId> -->
+      <!--     <version>2.3</version> -->
+      <!-- </dependency> -->
+      <!-- <dependency> -->
+      <!--     <groupId>org.apache.logging.log4j</groupId> -->
+      <!--     <artifactId>log4j-api</artifactId> -->
+      <!--     <version>2.3</version> -->
+      <!-- </dependency> -->
+      <!-- <dependency> -->
+      <!--     <groupId>log4j</groupId> -->
+      <!--     <artifactId>log4j</artifactId> -->
+      <!--     <version>1.2.17</version> -->
+      <!-- </dependency> -->
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.7.12</version>
       </dependency>
       <dependency>
 	  <groupId>org.apache.thrift</groupId>
@@ -42,10 +62,58 @@
           <version>0.4.0</version>
       </dependency>
       <dependency>
-          <groupId>org.postgresql</groupId>
-          <artifactId>postgresql</artifactId>
-          <version>9.4-1201-jdbc41</version>
-          </dependency>dependency>
-
+          <groupId>org.wikidata.wdtk</groupId>
+          <artifactId>wdtk-datamodel</artifactId>
+          <version>0.4.0</version>
+      </dependency>
+      <!-- <dependency> -->
+      <!--     <groupId>org.wikidata.wdtk</groupId> -->
+      <!--     <artifactId>wdtk-examples</artifactId> -->
+      <!--     <version>0.2.0</version> -->
+      <!-- </dependency> -->
+      <dependency>
+          <groupId>org.wikidata.wdtk</groupId>
+          <artifactId>wdtk-dumpfiles</artifactId>
+          <version>0.4.0</version>
+      </dependency>
+      <dependency>
+          <groupId>redis.clients</groupId>
+          <artifactId>jedis</artifactId>
+          <version>2.7.2</version>
+          <type>jar</type>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
+  <build>
+      <plugins>
+          <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.3</version>
+          <configuration>
+              <source>1.8</source>
+              <target>1.8</target>
+              </configuration>
+          </plugin>
+          <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>exec-maven-plugin</artifactId>
+              <version>1.2.1</version>
+              <executions>
+                  <execution>
+                      <goals>
+                          <goal>java</goal>
+                      </goals>
+                  </execution>
+              </executions>
+              <configuration>
+                  <mainClass>jhu.wikilinks.WikiTypeProcessor</mainClass>
+                  <!-- <arguments> -->
+                  <!--     <argument>foo</argument> -->
+                  <!--     <argument>bar</argument> -->
+                  <!-- </arguments> -->
+              </configuration>
+          </plugin>
+      </plugins>
+  </build>
 </project>
