--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,28 @@
                   </arguments>
               </configuration>
           </plugin>
+          <plugin>
+              <artifactId>maven-assembly-plugin</artifactId>
+              <configuration>
+                  <archive>
+                      <manifest>
+                          <mainClass>jhu.wikilinks.WikiTypeProcessor</mainClass>
+                      </manifest>
+                  </archive>
+                  <descriptorRefs>
+                      <descriptorRef>jar-with-dependencies</descriptorRef>
+                  </descriptorRefs>
+              </configuration>
+              <executions>
+                  <execution>
+                      <id>make-assembly</id>id> <!-- this is used for inheritance merges -->
+                      <phase>package</phase>phase> <!-- bind to the packaging phase -->
+                      <goals>
+                          <goal>single</goal>
+                      </goals>
+                  </execution>
+              </executions>
+          </plugin>
       </plugins>
   </build>
 </project>
