--- a/pom.xml
+++ b/pom.xml
@@ -113,28 +113,28 @@
               <target>1.8</target>
               </configuration>
           </plugin>
-          <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>exec-maven-plugin</artifactId>
-              <version>1.2.1</version>
-              <executions>
-                  <execution>
-                      <goals>
-                          <goal>java</goal>
-                      </goals>
-                  </execution>
-              </executions>
-              <configuration>
-                  <mainClass>jhu.wikilinks.WikiTypeProcessor</mainClass>
-                  <arguments>
-                      <argument>enwiki</argument>
-                      <argument>localhost</argument>
-                      <argument>6379</argument>
-                      <argument>20000</argument>
-                      <argument>wiki_types.rdb</argument>
-                  </arguments>
-              </configuration>
-          </plugin>
+          <!-- <plugin> -->
+          <!--     <groupId>org.codehaus.mojo</groupId> -->
+          <!--     <artifactId>exec-maven-plugin</artifactId> -->
+          <!--     <version>1.2.1</version> -->
+          <!--     <executions> -->
+          <!--         <execution> -->
+          <!--             <goals> -->
+          <!--                 <goal>java</goal> -->
+          <!--             </goals> -->
+          <!--         </execution> -->
+          <!--     </executions> -->
+          <!--     <configuration> -->
+          <!--         <mainClass>jhu.wikilinks.WikiTypeProcessor</mainClass> -->
+          <!--         <arguments> -->
+          <!--             <argument>enwiki</argument> -->
+          <!--             <argument>localhost</argument> -->
+          <!--             <argument>6379</argument> -->
+          <!--             <argument>20000</argument> -->
+          <!--             <argument>wiki_types.rdb</argument> -->
+          <!--         </arguments> -->
+          <!--     </configuration> -->
+          <!-- </plugin> -->
           <plugin>
               <artifactId>maven-assembly-plugin</artifactId>
               <configuration>
